--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-<title>GlassyEyedFish</title>
+<title>William's Homepage</title>
 <meta charset="UTF-8"/>
 
 <style>
@@ -44,51 +44,48 @@ pre {
 
 <body>
 
-<div>
-
     <img src="assets/gef.png" alt="Logo, a grayscale illustration of a fish" width=200 class="pic">
 
-<h1>Glassy Eyed Fish</h1>
+    <h1>William (glassyeyedfish)</h1>
  
-<p>Welcome to my website, the hub of all things me. For now it's just this one 
-page. Besides some personal links to my profiles on other sites, feel free 
-to browse my small link directory for other cool websites.
-<h2>Where to Find Me</h2>
+    <p>Welcome to my website, the hub of all things me. For now it's just this one 
+    page. Besides some personal links to my profiles on other sites, feel free 
+    to browse my small link directory for other cool websites.</p>
+    
+    <h2>Where to Find Me</h2>
 
-<ul>
-    <li>GitHub: <a href=https://github.com/glassyeyedfish>https://github.com/glassyeyedfish/</a></li>
-    <li>Itch: <a href=https://glassyeyedfish.itch.io>https://glassyeyedfish.itch.io/</a></li>
-</ul>
+    <ul>
+        <li>GitHub: <a href=https://github.com/glassyeyedfish>https://github.com/glassyeyedfish/</a></li>
+        <li>Itch: <a href=https://glassyeyedfish.itch.io>https://glassyeyedfish.itch.io/</a></li>
+    </ul>
 
-<h2>Link Directory</h2>
+    <h2>Link Directory</h2>
 
-<b>SADGRL.ONLINE</b> : <a href=https://sadgrl.online/>https://sadgrl.online/</a>
-<p>The site which inspited me to make this site in the first place.</p>
+    <b>SADGRL.ONLINE</b> : <a href=https://sadgrl.online/>https://sadgrl.online/</a>
+    <p>The site which inspited me to make this site in the first place.</p>
 
-<b>Chad's Guide</b> : <a href=https://landchad.net/>https://landchad.net/</a>
-<p>The "Chad's Guide to Starting Your Own Website". Used to start this very
-website! Although now it's hosted using Github Pages.</p>
+    <b>Chad's Guide</b> : <a href=https://landchad.net/>https://landchad.net/</a>
+    <p>The "Chad's Guide to Starting Your Own Website". Used to start this very
+    website! Although now it's hosted using Github Pages.</p>
 
-<b>Vimm's Lair</b> : <a href=https://vimm.net/>https://vimm.net/</a>
-<p>An excellent source of retro games and the emulators needed to play them.</p>
+    <b>Vimm's Lair</b> : <a href=https://vimm.net/>https://vimm.net/</a>
+    <p>An excellent source of retro games and the emulators needed to play them.</p>
 
-<b>MetaMath Proof Explorer</b> : <a href=https://us.metamath.org/mpeuni/mmset.html>https://us.metamath.org/mpeuni/mmset.html</a>
-<p>A collection of incredibly rigerous, computer verified mathematical proofs
-for thousands of theorems in maths and logic. I personally love this
-website to death, but I doubt you will. Either way, it's here for those
-of you who appreciate knoledge at it's purest.</p>
+    <b>MetaMath Proof Explorer</b> : <a href=https://us.metamath.org/mpeuni/mmset.html>https://us.metamath.org/mpeuni/mmset.html</a>
+    <p>A collection of incredibly rigerous, computer verified mathematical proofs
+    for thousands of theorems in maths and logic. I personally love this
+    website to death, but I doubt you will. Either way, it's here for those
+    of you who appreciate knoledge at it's purest.</p>
 
-<b>W3Schools</b> : <a href=https://www.w3schools.com/>https://www.w3schools.com/</a>
-<p>A fantastic resource/reference for coding including HTML, CSS, JavaScript,
-Python, Java, etc... I personally use it to remember how to declare a
-variable every time I go back to a language I haven't used in a while.</p>
+    <b>W3Schools</b> : <a href=https://www.w3schools.com/>https://www.w3schools.com/</a>
+    <p>A fantastic resource/reference for coding including HTML, CSS, JavaScript,
+    Python, Java, etc... I personally use it to remember how to declare a
+    variable every time I go back to a language I haven't used in a while.</p>
 
-<h2>Banners</h2>
+    <h2>Banners</h2>
 
-<a href=https://sadgrl.online/><img alt="sadgrl.online banner" src=https://sadgrl.online/images/homepage/button-new.gif></a>
-<a href=https://landchad.net/><img alt="landchad.net banner" src=https://landchad.net/pix/landchad.gif></a>
-
-</div>
+    <a href=https://sadgrl.online/><img alt="sadgrl.online banner" src=https://sadgrl.online/images/homepage/button-new.gif></a>
+    <a href=https://landchad.net/><img alt="landchad.net banner" src=https://landchad.net/pix/landchad.gif></a>
 
 </body>
 
