--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ pre {
 
     <ul>
         <li>GitHub: <a href=https://github.com/glassyeyedfish>https://github.com/glassyeyedfish/</a></li>
+        <li>Bandcamp: <a href=https://glassyeyedfish.bandcamp.com/>https://glassyeyedfish.bandcamp.com/</a></li>
         <li>Itch: <a href=https://glassyeyedfish.itch.io>https://glassyeyedfish.itch.io/</a></li>
     </ul>
 
