--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ pre {
 
     <img src="assets/gef.png" alt="Logo, a grayscale illustration of a fish" width=200 class="pic">
 
-    <h1>William (glassyeyedfish)</h1>
+    <h1>William</h1>
  
     <p>Welcome to my website, the hub of all things me. For now it's just this one 
     page. Besides some personal links to my profiles on other sites, feel free 
@@ -62,23 +62,23 @@ pre {
 
     <h2>Link Directory</h2>
 
-    <b>SADGRL.ONLINE</b> : <a href=https://sadgrl.online/>https://sadgrl.online/</a>
+    <p><b>SADGRL.ONLINE</b> : <a href=https://sadgrl.online/>https://sadgrl.online/</a></p>
     <p>The site which inspited me to make this site in the first place.</p>
 
-    <b>Chad's Guide</b> : <a href=https://landchad.net/>https://landchad.net/</a>
+    <p><b>Chad's Guide</b> : <a href=https://landchad.net/>https://landchad.net/</a></p>
     <p>The "Chad's Guide to Starting Your Own Website". Used to start this very
     website! Although now it's hosted using Github Pages.</p>
 
-    <b>Vimm's Lair</b> : <a href=https://vimm.net/>https://vimm.net/</a>
+    <p><b>Vimm's Lair</b> : <a href=https://vimm.net/>https://vimm.net/</a></p>
     <p>An excellent source of retro games and the emulators needed to play them.</p>
 
-    <b>MetaMath Proof Explorer</b> : <a href=https://us.metamath.org/mpeuni/mmset.html>https://us.metamath.org/mpeuni/mmset.html</a>
+    <p><b>MetaMath Proof Explorer</b> : <a href=https://us.metamath.org/mpeuni/mmset.html>https://us.metamath.org/mpeuni/mmset.html</a></p>
     <p>A collection of incredibly rigerous, computer verified mathematical proofs
     for thousands of theorems in maths and logic. I personally love this
     website to death, but I doubt you will. Either way, it's here for those
     of you who appreciate knoledge at it's purest.</p>
 
-    <b>W3Schools</b> : <a href=https://www.w3schools.com/>https://www.w3schools.com/</a>
+    <p><b>W3Schools</b> : <a href=https://www.w3schools.com/>https://www.w3schools.com/</a></p>
     <p>A fantastic resource/reference for coding including HTML, CSS, JavaScript,
     Python, Java, etc... I personally use it to remember how to declare a
     variable every time I go back to a language I haven't used in a while.</p>
