Added blog post

--- a/index.html
+++ b/index.html
@@ -4,41 +4,9 @@
 
 <head>
 
-<title>William's Homepage</title>
-<meta charset="UTF-8">
-
-<style>
-body {
-    background-color: #111111;
-    color: #dddddd;
-
-    line-height: 1.6;
-    font-family: sans-serif;
-
-    padding: 1em;
-    max-width: 42em;
-    margin: auto;
-}
-
-a, .pr {
-    color: #ae81ff;
-}
-
-a:hover {
-    color: #8160be;
-}
-
-pre {
-     padding: 1em;
-     background-color: #333333;
-}
-
-.pic {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-</style>
+    <title>William's Homepage</title>
+    <meta charset="UTF-8">
+    <link href="styles/dark.css" rel="stylesheet">
 
 </head>
 
@@ -49,8 +17,10 @@ pre {
     <h1>William</h1>
  
     <p>Welcome to my website, the hub of all things me. For now it's just this one 
-    page. Besides some personal links to my profiles on other sites, feel free 
-    to browse my small link directory for other cool websites.</p>
+        page. Besides some personal links to my profiles on other sites, feel free 
+        to browse my small link directory for other cool websites. I also have a 
+        small blog which you are free to read.
+    </p>
     
     <h2>Where to Find Me</h2>
 
@@ -83,10 +53,18 @@ pre {
     Python, Java, etc... I personally use it to remember how to declare a
     variable every time I go back to a language I haven't used in a while.</p>
 
+    <h2>Blog</h2>
+
+    <ul>
+        <li><a href="blog/epsilon-delta.html">Some Example Epsilon-Delta Proofs</a></li>
+    </ul>
+
     <h2>Banners</h2>
 
-    <a href=https://sadgrl.online/><img alt="sadgrl.online banner" src=https://sadgrl.online/images/homepage/button-new.gif></a>
-    <a href=https://landchad.net/><img alt="landchad.net banner" src=https://landchad.net/pix/landchad.gif></a>
+    <a href=https://sadgrl.online><img alt="sadgrl.online banner" src=https://sadgrl.online/images/homepage/button-new.gif></a>
+    <a href=https://landchad.net><img alt="landchad.net banner" src=https://landchad.net/pix/landchad.gif></a>
+
+    <p style="font-style: italic;">Page last updated on Sunday 9th, April, 2022.</p>
 
 </body>
 
