--- a/proofs/analysis/lub.html
+++ b/proofs/analysis/lub.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang='en'>
@@ -31,9 +32,30 @@
 
     <img src="../../assets/gef.png" alt="Logo, a grayscale illustration of a fish" width=200 class="pic">
 
-    <h1>Heading</h1>
+    <h1>The Least Upper Bound Property of the Real Numbers</h1>
 
-    <p style="font-style: italic;">Page last updated on the 11th of April, 2022.</p>
+    <div class="important">
+        <b>Axiom:</b> The Least Upper Bound Property of the Real Numbers
+        <br><br>
+        If: 
+        <ul>
+            <li>\(A \subseteq \RR\)</li>
+            <li>\(A\) is not empty</li>
+            <li>\(A\) is bounded above</li>
+        </ul>
+        Then:
+        <ul>
+            <li>There exists \(s \in \RR\) such that \(s\) is the supremum of \(A\)</li>
+        </ul>
+    </div>
+
+    <h2>Definitions Used</h2>
+
+    <ul>
+        <li><a href="supremum.html">Supremum</a></li>
+    </ul>
+
+    <p style="font-style: italic;">Page last updated on the 12th of April, 2022.</p>
 
 </body>
 
