--- a/proofs/analysis/sup-lemma.html
+++ b/proofs/analysis/sup-lemma.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <html lang='en'>
@@ -32,15 +31,7 @@
 
     <img src="../../assets/gef.png" alt="Logo, a grayscale illustration of a fish" width=200 class="pic">
 
-    <h1>The Least Upper Bound Property of the Real Numbers</h1>
-
-    <div class="important">
-        <b>Axiom:</b> The Least Upper Bound Property of the Real Numbers
-        <br><br>
-        If \(A \subseteq \RR\) and \(A\) is bounded above, then there exists \(s \in \RR\) 
-        such that for all \(m \in \RR\), if \(m\) is an upper bound of \(A\), then 
-        \(s \leq m\).
-    </div>
+    <h1>Supremum Lemma</h1>
 
     <p style="font-style: italic;">Page last updated on the 11th of April, 2022.</p>
 
