--- a/proofs/analysis/supremum.html
+++ b/proofs/analysis/supremum.html
@@ -31,9 +31,17 @@
 
     <img src="../../assets/gef.png" alt="Logo, a grayscale illustration of a fish" width=200 class="pic">
 
-    <h1>Heading</h1>
+    <h1>Supremum</h1>
 
-    <p style="font-style: italic;">Page last updated on the 11th of April, 2022.</p>
+    <div class="important">
+        <b>Definition:</b> Supremum 
+        <br><br>
+        Given \(s \in \RR\) and \(A \subseteq \RR\): <br>
+        \(s\) is the supremum of \(A\) iff \(s\) is an upper bound of \(A\) and 
+        for all \(m \in \RR\) if \(m\) an upper bound of \(A\) then \(s \leq m\).
+    </div>
+
+    <p style="font-style: italic;">Page last updated on the 12th of April, 2022.</p>
 
 </body>
 
