--- a/proofs/analysis/sup-lemma.html
+++ b/proofs/analysis/sup-lemma.html
@@ -31,7 +31,7 @@
 
     <img src="../../assets/gef.png" alt="Logo, a grayscale illustration of a fish" width=200 class="pic">
 
-    <h1>Supremum Lemma</h1>
+    <h1>Supremum LemmaConsequences of Completeness</h1>
 
     <p style="font-style: italic;">Page last updated on the 11th of April, 2022.</p>
 
