--- a/proofs/index.html
+++ b/proofs/index.html
@@ -35,85 +35,78 @@
 
     <h2>The Rules of Inference</h2>
 
+    <p>These are a list of valid steps that can be made in a proof.</p>
+
     <div class="box">
-        <b>Deduction</b>
-        <br><br>
-        Prerequisites:
+        From:
         <ul>
-            <li>if \(P\), then \(Q\) OR \(P\) iff \(Q\)</li>
-            <li>\(P\)</li>
+            <li>P derived.</li>
         </ul>
-        Result:
+        Obtain:
         <ul>
-            <li>\(Q\)</li>
+            <li>P derived.</li>
         </ul>
     </div>
 
     <br>
 
     <div class="box">
-        <b>The Rule of Direct Proof</b>
-        <br><br>
-        Prerequisites:
+        From:
         <ul>
-            <li>A subproof from \(P\) to \(Q\)</li>
+            <li>If P, then Q derived.</li>
+            <li>P derived.</li>
         </ul>
-        We can:
+        Obtain:
         <ul>
-            <li>Discharge \(P\)</li>
-            <li>If \(P\), then \(Q\)</li>
+            <li>Q derived.</li>
         </ul>
     </div>
 
     <br>
 
     <div class="box">
-        <b>The Rule of Generalization</b>
-        <br><br>
-        Given that:
+        Obtain:
         <ul>
-            <li>We have fixed \(x\) with some condition.</li>
-            <li>We have shown \(P(x)\).</li>
-            <li>There are no undischanrged assumptions about \(x\).</li>
+            <li>P assumed.</li>
         </ul>
-        We can:
+    </div>
+
+    <div class="box">
+        From:
         <ul>
-            <li>Deduce "For all \(x\) with the condition, \(P(x)\)".</li>
+            <li>P assumed most recently.</li>
+            <li>Q derived.</li>
+        </ul>
+        Obtain:
+        <ul>
+            <li>If P, then Q derived.</li>
+            <li>P discharged.</li>
         </ul>
     </div>
 
     <br>
 
     <div class="box">
-        <b>The Rule of Specification</b>
-        <br><br>
-        Given that:
+        Obtain:
         <ul>
-            <li>We have shown "For all \(x\) with some condition, \(P(x)\)".</li>
-            <li>We have shown \(y\) has the condition.</li>
-        </ul>
-        We can:
-        <ul>
-            <li>Deduce \(P(y)\).</li>
+            <li>x fixed such that C(x).</li>
         </ul>
     </div>
 
     <br>
 
     <div class="box">
-        <b>The Rule of Choice</b>
-        <br><br>
-        Given that:
+        From:
         <ul>
-            <li>We have sown "There exists \(x\) with some condition, such that \(P(x)\)".</li>
+            <li>x fixed such that C(x) most recently.</li>
+            <li>P(x) derived.</li>
         </ul>
-        We can:
+        Obtain:
         <ul>
             <li></li>
         </ul>
     </div>
 
-    <p style="font-style: italic;">Page last updated on the 11th of April, 2022.</p>
 
 </body>
 
