Added one whole comment. Incredible!

--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
     </div>
 
     <script>
+        // Toggle the dark/light theme
         const btn = document.querySelector("#theme-button");
-        btn.addEventListener("click", function() { document.body.classList.toggle("light-theme"); });
+        btn.addEventListener("click", () => { document.body.classList.toggle("light-theme"); });
     </script>
 
 </body>
