Wow, trippy background

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <meta charset="UTF-8">
     <link href="styles/gef.css" rel="stylesheet" type="text/css">
 
+    <style>
+        html {
+            background-image: url("assets/bg.gif");
+            background-repeat: repeat;
+            background-attachment: fixed;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -80,6 +88,10 @@
         <a href=https://landchad.net><img alt="landchad.net banner" src=https://landchad.net/pix/landchad.gif></a>
 
         <p style="font-style: italic;">Page last updated on Tuesday 27th, June, 2023.</p>
+    </div>
+
+    <div>
+        <img src="assets/logo-pallette.png" id="logo-pallette">
     </div>
 
     <script>
