css fix attempt

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>William's Homepage</title>
     <meta charset="UTF-8">
-    <link href="styles/gef.css" rel="stylesheet" type="text/css">
+    <link href="https://glassyeyed.fish/styles/gef.css" rel="stylesheet" type="text/css">
 
     <style>
         html {
