--- a/index.html
+++ b/index.html
@@ -84,8 +84,10 @@
 
     <div class="bbl">
         <br>
-        <a href=https://sadgrl.online><img alt="sadgrl.online banner" src=https://sadgrl.online/images/homepage/button-new.gif></a>
-        <a href=https://landchad.net><img alt="landchad.net banner" src=https://landchad.net/pix/landchad.gif></a>
+        <a href="https://glassyeyed.fish"><img alt="glassyeyed.fish banner" src="assets/banner.gif"></a>
+        <a href=https://sadgrl.online><img alt="sadgrl.online banner" src="https://sadgrl.online/images/homepage/button-new.gif"></a>
+        <a href=https://landchad.net><img alt="landchad.net banner" src="https://landchad.net/pix/landchad.gif"></a>
+
 
         <p style="font-style: italic;">Page last updated on Tuesday 27th, June, 2023.</p>
     </div>
