A very important commit

--- a/index.html
+++ b/index.html
@@ -23,17 +23,13 @@
     <div class="bpu">
         <svg fill="currentColor" class="___12fm75w f1w7gpdv fez10in fg4l7m0" aria-hidden="true" width="2em" height="2em" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" id="theme-button">
             <path d="M10 3.5a6.5 6.5 0 1 1 0 13v-13ZM10 2a8 8 0 1 0 0 16 8 8 0 0 0 0-16Z" fill="currentColor"></path></svg>
-        <img src="assets/gef.png" alt="Logo, a grayscale illustration of a fish" width=200 class="pic">
+        <img src="assets/gef.png" alt="Logo, a grayscale illustration of a fish" width=200 class="pic"><br>
 
-        <h1>William</h1>
+        <h1>William</h1><br>
     
         <p>Welcome to my website, the hub of all things me. For now, it's just this one 
             page. Besides some personal links to my profiles on other sites, feel free 
             to browse my small link directory for other cool websites.
-        </p>
-
-        <p>
-            <a href="index.html">Home</a>
         </p>
     </div>
     
@@ -48,34 +44,34 @@
     </div>
 
     <div class="bye">
-        <h2>Link Directory</h2>
+        <h2>Link Directory</h2><br>
 
         <p><b>Lydia Closson Illustrations</b>: <a href="https://www.lydia.closson.ca/">https://www.lydia.closson.ca/</a>
-        <br>The website of the greatest artist the world, nay, the universe has ever seen. Also, my sister :)</p>
+        <br>The website of the greatest artist the world, nay, the universe has ever seen. Also, my sister :)</p><br>
 
         <p><b>The Reginalia</b>: <a href="https://thereginalia.wixsite.com/thereginalia">https://thereginalia.wixsite.com/thereginalia/</a>
-        <br>The personal website of my favorite person.</p>
+        <br>The personal website of my favorite person.</p><br>
 
         <p><b>SADGIRL.ONLINE</b>: <a href=https://sadgrl.online/>https://sadgrl.online/</a>
-        <br>The site which inspited me to make this site in the first place.</p>
+        <br>The site which inspired me to make this site in the first place.</p><br>
 
         <p><b>Chad's Guide</b>: <a href=https://landchad.net/>https://landchad.net/</a>
         <br>The "Chad's Guide to Starting Your Own Website". Used to start this very
-        website! Although now it's hosted using Github Pages.</p>
+        website! Although now it's hosted using GitHub Pages.</p><br>
 
         <p><b>Vimm's Lair</b>: <a href=https://vimm.net/>https://vimm.net/</a>
-        <br>An excellent source of retro games and the emulators needed to play them.</p>
+        <br>An excellent source of retro games and the emulators needed to play them.</p><br>
 
         <p><b>MetaMath Proof Explorer</b>: <a href=https://us.metamath.org/mpeuni/mmset.html>https://us.metamath.org/mpeuni/mmset.html/</a>
-        <br>A collection of incredibly rigerous, computer verified mathematical proofs
+        <br>A collection of incredibly rigorous, computer verified mathematical proofs
         for thousands of theorems in maths and logic. I personally love this
         website to death, but I doubt you will. Either way, it's here for those
-        of you who appreciate knoledge at it's purest.</p>
+        of you who appreciate knowledge at its purest.</p><br>
 
         <p><b>W3Schools</b>: <a href=https://www.w3schools.com/>https://www.w3schools.com/</a>
         <br>A fantastic resource/reference for coding including HTML, CSS, JavaScript,
         Python, Java, etc... I personally use it to remember how to declare a
-        variable every time I go back to a language I haven't used in a while.</p>
+        variable every time I go back to a language I haven't used in a while.</p><br>
 
         <p><b>The Skybox</b>: <a href="https://skybox.thecomicseries.com/">https://skybox.thecomicseries.com/</a>
         <br>The site for a fantastic webcomic with a story board style and world 
@@ -83,25 +79,19 @@
     </div>
 
     <div class="bbl">
-        <br>
         <a href="https://glassyeyed.fish"><img alt="glassyeyed.fish banner" src="assets/banner.gif"></a>
         <a href=https://sadgrl.online><img alt="sadgrl.online banner" src="https://sadgrl.online/images/homepage/button-new.gif"></a>
         <a href=https://landchad.net><img alt="landchad.net banner" src="https://landchad.net/pix/landchad.gif"></a>
 
 
-        <p style="font-style: italic;">Page last updated on Tuesday 27th, June, 2023.</p>
+        <p style="font-style: italic;">Page last updated on 2023/06/27</p>
     </div>
 
     <div>
         <img src="assets/logo-pallette.png" id="logo-pallette">
     </div>
 
-    <script>
-        // Toggle the dark/light theme
-        const btn = document.querySelector("#theme-button");
-        btn.addEventListener("click", () => { document.body.classList.toggle("light-theme"); });
-    </script>
-
+    <script src="js/gef.js"></script>
 </body>
 
 </html>
