Change reginalia link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p><b>Lydia Closson Illustrations</b>: <a href="https://www.lydia.closson.ca/">https://www.lydia.closson.ca/</a>
         <br>The website of the greatest artist the world, nay, the universe has ever seen. Also, my sister :)</p><br>
 
-        <p><b>The Reginalia</b>: <a href="https://thereginalia.wixsite.com/thereginalia">https://thereginalia.wixsite.com/thereginalia/</a>
+        <p><b>The Reginalia</b>: <a href="https://thereginalia.github.io/">https://thereginalia.github.io/</a>
         <br>The personal website of my favorite person.</p><br>
 
         <p><b>SADGIRL.ONLINE</b>: <a href=https://sadgrl.online/>https://sadgrl.online/</a>
@@ -87,7 +87,7 @@
     </div>
 
     <div class="bbl">
-        <p style="font-style: italic;">Page last updated on 2023/06/27</p>
+        <p style="font-style: italic;">Page last updated on 2023/07/04.</p>
     </div>
 
     <script src="js/gef.js"></script>
