--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <title>William's Homepage</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link href="styles/gef.css" rel="stylesheet" type="text/css">
 
     <style>
