Fix sizeing, shrink links

--- a/index.html
+++ b/index.html
@@ -38,43 +38,43 @@
         <h2>Where to Find Me</h2>
 
         <ul>
-            <li>GitHub: <a href=https://github.com/glassyeyedfish>https://github.com/glassyeyedfish/</a></li>
-            <li>Bandcamp: <a href=https://glassyeyedfish.bandcamp.com/>https://glassyeyedfish.bandcamp.com/</a></li>
-            <li>Itch: <a href=https://glassyeyedfish.itch.io>https://glassyeyedfish.itch.io/</a></li>
+            <li><a href=https://github.com/glassyeyedfish>GitHub</a></li>
+            <li><a href=https://glassyeyedfish.bandcamp.com/>Bandcamp</a></li>
+            <li><a href=https://glassyeyedfish.itch.io>Itch</a></li>
         </ul>
     </div>
 
     <div class="bye">
         <h2>Link Directory</h2><br>
 
-        <p><b>Lydia Closson Illustrations</b>: <a href="https://www.lydia.closson.ca/">https://www.lydia.closson.ca/</a>
+        <p><a href="https://www.lydia.closson.ca/">Lydia Closson Illustrations</a>
         <br>The website of the greatest artist the world, nay, the universe has ever seen. Also, my sister :)</p><br>
 
-        <p><b>The Reginalia</b>: <a href="https://thereginalia.github.io/">https://thereginalia.github.io/</a>
+        <p><a href="https://thereginalia.github.io/">The Reginalia</a>
         <br>The personal website of my favorite person.</p><br>
 
-        <p><b>SADGIRL.ONLINE</b>: <a href=https://sadgrl.online/>https://sadgrl.online/</a>
+        <p><a href=https://sadgrl.online/>SADGRL.ONLINE</a>
         <br>The site which inspired me to make this site in the first place.</p><br>
 
-        <p><b>Chad's Guide</b>: <a href=https://landchad.net/>https://landchad.net/</a>
+        <p><a href=https://landchad.net/>Chad's Guide</a>
         <br>The "Chad's Guide to Starting Your Own Website". Used to start this very
         website! Although now it's hosted using GitHub Pages.</p><br>
 
-        <p><b>Vimm's Lair</b>: <a href=https://vimm.net/>https://vimm.net/</a>
+        <p><a href=https://vimm.net/>Vimm's Lair</a>
         <br>An excellent source of retro games and the emulators needed to play them.</p><br>
 
-        <p><b>MetaMath Proof Explorer</b>: <a href=https://us.metamath.org/mpeuni/mmset.html>https://us.metamath.org/mpeuni/mmset.html/</a>
+        <p><a href=https://us.metamath.org/mpeuni/mmset.html>MetaMath Proof Explorer</a>
         <br>A collection of incredibly rigorous, computer verified mathematical proofs
         for thousands of theorems in maths and logic. I personally love this
         website to death, but I doubt you will. Either way, it's here for those
         of you who appreciate knowledge at its purest.</p><br>
 
-        <p><b>W3Schools</b>: <a href=https://www.w3schools.com/>https://www.w3schools.com/</a>
+        <p><a href=https://www.w3schools.com/>W3Schools</a>
         <br>A fantastic resource/reference for coding including HTML, CSS, JavaScript,
         Python, Java, etc... I personally use it to remember how to declare a
         variable every time I go back to a language I haven't used in a while.</p><br>
 
-        <p><b>The Skybox</b>: <a href="https://skybox.thecomicseries.com/">https://skybox.thecomicseries.com/</a>
+        <p><a href="https://skybox.thecomicseries.com/">Skybox Comic</a>
         <br>The site for a fantastic webcomic with a story board style and world 
         building that is completely unique. Also, it's actually finished!</p>
     </div>
