Added Acme Klein Bottles to link directory

--- a/index.html
+++ b/index.html
@@ -53,23 +53,27 @@
         <p><a href="https://thereginalia.github.io/">The Reginalia</a>
         <br>The personal website of my favorite person.</p><br>
 
-        <p><a href=https://sadgrl.online/>SADGRL.ONLINE</a>
+        <p><a href="https://sadgrl.online/">SADGRL.ONLINE</a>
         <br>The site which inspired me to make this site in the first place.</p><br>
 
-        <p><a href=https://landchad.net/>Chad's Guide</a>
+        <p><a href="https://www.kleinbottle.com/">Acme Klein Bottles</a>
+        <br>A fantastic site run by Cliff Stoll where you can buy glass 
+        Klein bottles.</p><br>
+
+        <p><a href="https://landchad.net/">Chad's Guide</a>
         <br>The "Chad's Guide to Starting Your Own Website". Used to start this very
         website! Although now it's hosted using GitHub Pages.</p><br>
 
-        <p><a href=https://vimm.net/>Vimm's Lair</a>
+        <p><a href="https://vimm.net/">Vimm's Lair</a>
         <br>An excellent source of retro games and the emulators needed to play them.</p><br>
 
-        <p><a href=https://us.metamath.org/mpeuni/mmset.html>MetaMath Proof Explorer</a>
+        <p><a href="https://us.metamath.org/mpeuni/mmset.html">MetaMath Proof Explorer</a>
         <br>A collection of incredibly rigorous, computer verified mathematical proofs
         for thousands of theorems in maths and logic. I personally love this
         website to death, but I doubt you will. Either way, it's here for those
         of you who appreciate knowledge at its purest.</p><br>
 
-        <p><a href=https://www.w3schools.com/>W3Schools</a>
+        <p><a href="https://www.w3schools.com/">W3Schools</a>
         <br>A fantastic resource/reference for coding including HTML, CSS, JavaScript,
         Python, Java, etc... I personally use it to remember how to declare a
         variable every time I go back to a language I haven't used in a while.</p><br>
