--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
         <ul>
             <li><a href=https://github.com/glassyeyedfish>GitHub</a></li>
             <li><a href=https://glassyeyedfish.bandcamp.com/>Bandcamp</a></li>
-            <li><a href=https://glassyeyedfish.itch.io>Itch</a></li>
+            <li><a href=https://glassyeyedfish.itch.io>Itch.io</a></li>
+            <li><a href=https://archiveofourown.org/users/glassyeyedfish>Archive of our Own</a></li>
         </ul>
     </div>
 
