--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </div>
 
     <div class="bbl">
-        <p style="font-style: italic;">Page last updated on 2023/08/03.</p>
+        <p style="font-style: italic;">Page last updated on February 8th, 2025.</p>
     </div>
 
     <script src="js/gef.js"></script>
