Fix sadgirl banner

--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
 
     <div>
         <a href="https://glassyeyed.fish"><img alt="glassyeyed.fish banner" src="assets/banner.gif"></a>
-        <a href=https://sadgrl.online><img alt="sadgrl.online banner" src="https://sadgrl.online/images/homepage/button-new.gif"></a>
+        <a href=https://sadgrl.online><img alt="sadgrl.online banner" src="https://sadgrlonline.github.io/archived-sadgrl.online/assets/images/buttons/sadgrlonline.gif"></a>
         <a href=https://landchad.net><img alt="landchad.net banner" src="https://landchad.net/pix/landchad.gif"></a>
         <br>
         <img src="assets/logo-pallette.png" id="logo-pallette">
     </div>
 
     <div class="bbl">
-        <p style="font-style: italic;">Page last updated on February 8th, 2025.</p>
+        <p style="font-style: italic;">Page last updated on January 18th, 2026.</p>
     </div>
 
     <script src="js/gef.js"></script>
